--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&display=swap');
 
 html {
 	box-sizing: border-box;
@@ -8,31 +9,31 @@ body {
 	margin: 0;
 	min-height: 100vh;
 	background-color: #cdd9dd;
-	font-family: 'EB Garamond', serif;
+	font-family: 'Montserrat', serif;
 	color: #000;
 	text-align: center;
-	display: flex;
-	align-items: center;
-background-color: #e3e3e3;
-background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23103776' fill-opacity='0.47' fill-rule='evenodd'/%3E%3C/svg%3E");
+	background-color: #e3e3e3;
+	background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23103776' fill-opacity='0.47' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 .quote-container {
 	width: auto;
-	max-width: 900px;
+	max-width: 600px;
 	padding: 1.85rem;
-	margin: 0 auto;
+	margin: 10% auto;
+	flex-direction: column;
 	border-radius: 10px;
-	background-color: rgba(255, 255, 255, 0.75);
+	background-color: rgba(255, 255, 255, 0.95);
 	box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
+	border: 4px solid rgba(1, 22, 39, 0.75);
 }
 
 .quote-text {
 	font-size: 1.5rem;
 }
 
-.long-quote {
-	font-size: 1.2rem;
+#quote {
+	font-family: 'Architects Daughter', cursive;
 }
 
 .fa-quote-left {
@@ -42,7 +43,6 @@ background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox=
 .quote-author {
 	margin: 1rem;
 	text-align: right;
-	font-style: italic;
 }
 
 .button-container {
@@ -80,7 +80,7 @@ button:active {
 	font-size: 1.15rem;
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
 	.quote-container {
 		margin: 0 1rem;
 	}
@@ -88,4 +88,4 @@ button:active {
 	.quote-text {
 		font-size: 1.25rem;
 	}
-}
+} */
